comment out fonts

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
-.fonts {
+/* .fonts {
   font-family: "Comfortaa", cursive;
   font-family: "Open Sans", sans-serif;
   font-family: "Poppins", sans-serif;
-}
+} */
 
 body {
   margin: 0;
