add dynamic font size to flashcards

--- a/src/styles.css
+++ b/src/styles.css
@@ -181,25 +181,28 @@ i {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 16vw;
+  min-width: 60vw;
   padding: 4vh 0;
   border: 1px solid #101213;
   border-radius: 20px;
-  background-color: #ffffff;
+  background-color: #fef7f7;
   box-shadow: 1vw 1vh #73aacc;
+  padding: 1vw;
+  min-height: 60vh;
 }
 
 .flashcard > h3 {
   font-family: "Open Sans", sans-serif;
   text-transform: uppercase;
   font-weight: bold;
-  max-width: 14vw;
   text-align: center;
+  max-width: 50vw;
 }
 
 .flashcard > p {
   font-family: "Open Sans", sans-serif;
   color: #716760;
+  font-size: 2rem;
 }
 
 .true > p {
@@ -247,7 +250,7 @@ i {
   cursor: pointer;
 }
 
-.title {
+.title-pick {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -296,6 +299,7 @@ table {
   width: 73vw;
   font-size: 1.5rem;
   background-color: #101213;
+  font-family: "Poppins", sans-serif;
 }
 
 th {
